--- a/JusTipe/MainWindow.xaml
+++ b/JusTipe/MainWindow.xaml
@@ -5,8 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JusTipe"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="10*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Button Content="Save" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40"/>
+            <Button Content="Clear" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Grid.Column="1" Click="Button_Click_1"/>
+            <TextBox HorizontalAlignment="Center" Height="40" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="24" FontWeight="Bold" TextAlignment="Center" Grid.Column="2"/>
+            <TextBox HorizontalAlignment="Center" Height="40" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="24" FontWeight="Bold" TextAlignment="Center" Grid.Column="3"/>
+            <Button Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Click="Button_Click" Grid.Column="4"/>
+        </Grid>
+
+        <TextBox x:Name="MainText" HorizontalAlignment="Left" Height="535" Margin="10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="780" Grid.Row="1"/>
     </Grid>
 </Window>
