--- a/JusTipe/MainWindow.xaml
+++ b/JusTipe/MainWindow.xaml
@@ -19,13 +19,27 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button Content="Save" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40"/>
-            <Button Content="Clear" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Grid.Column="1" Click="Button_Click_1"/>
-            <TextBox HorizontalAlignment="Center" Height="40" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="24" FontWeight="Bold" TextAlignment="Center" Grid.Column="2"/>
-            <TextBox HorizontalAlignment="Center" Height="40" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="24" FontWeight="Bold" TextAlignment="Center" Grid.Column="3"/>
-            <Button Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Click="Button_Click" Grid.Column="4"/>
+            <Button Content="Save" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Click="Save_Click"/>
+            <Button Content="Clear" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Grid.Column="1" Click="Clear_Click"/>
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Progress Timer" HorizontalAlignment="Center" FontSize="12" Margin="0,0,0,-10"/>
+                <TextBox x:Name="txtProgTimer" Text="300" HorizontalAlignment="Center" Height="25" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="18" FontWeight="Bold" TextAlignment="Center" Grid.Row="1"/>
+            </Grid>
+            <Grid Grid.Column="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Clear Timer" HorizontalAlignment="Center" FontSize="12" Margin="0,0,0,-10"/>
+                <TextBox x:Name="txtCountdown" Text="10" HorizontalAlignment="Center" Height="25" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="18" FontWeight="Bold" TextAlignment="Center" Grid.Row="1"/>
+            </Grid>
+            <Button Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Click="Exit_Click" Grid.Column="4"/>
         </Grid>
 
-        <TextBox x:Name="MainText" HorizontalAlignment="Left" Height="535" Margin="10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="780" Grid.Row="1"/>
+        <TextBox x:Name="MainText" HorizontalAlignment="Left" Height="535" Margin="10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="780" Grid.Row="1" TextChanged="MainText_TextChanged"/>
     </Grid>
 </Window>
