--- a/JusTipe/MainWindow.xaml
+++ b/JusTipe/MainWindow.xaml
@@ -8,9 +8,11 @@
         Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
+            <RowDefinition/>
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
+        
+        <!-- Top bar -->
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -19,8 +21,12 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
+
             <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Click="Save_Click"/>
+            
             <Button Content="Clear" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Grid.Column="1" Click="Clear_Click"/>
+
+            <!-- Progress timer -->
             <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="2*"/>
@@ -29,6 +35,8 @@
                 <Label Content="Progress Timer" HorizontalAlignment="Center" FontSize="12" Margin="0,0,0,-10"/>
                 <TextBox x:Name="txtProgTimer" Text="300" HorizontalAlignment="Center" Height="25" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="18" FontWeight="Bold" TextAlignment="Center" Grid.Row="1"/>
             </Grid>
+
+            <!-- Clear timer -->
             <Grid Grid.Column="3">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="2*"/>
@@ -37,9 +45,13 @@
                 <Label Content="Clear Timer" HorizontalAlignment="Center" FontSize="12" Margin="0,0,0,-10"/>
                 <TextBox x:Name="txtCountdown" Text="10" HorizontalAlignment="Center" Height="25" TextWrapping="Wrap" VerticalAlignment="Center" Width="100" FontSize="18" FontWeight="Bold" TextAlignment="Center" Grid.Row="1"/>
             </Grid>
+
             <Button Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="40" Click="Exit_Click" Grid.Column="4"/>
+
         </Grid>
+        <!-- End top bar -->
 
         <TextBox x:Name="MainText" HorizontalAlignment="Left" Height="535" Margin="10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="780" Grid.Row="1" TextChanged="MainText_TextChanged" VerticalScrollBarVisibility="Auto" AcceptsReturn="True"/>
+    
     </Grid>
 </Window>
